--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4JGH2GENXY"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-4JGH2GENXY");
+    </script>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -344,9 +358,7 @@
                   <a href="https://missioned.netlify.com">MissionEd Revamp</a>
                 </h3>
                 <div class="text">Branding, Designing, Development</div>
-                <a
-                  href="https://missioned.netlify.com"
-                   class="main-button"
+                <a href="https://missioned.netlify.com" class="main-button"
                   >Know More</a
                 >
               </div>
@@ -369,12 +381,12 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="http://harry-sharma.netlify.com">Harry Sharma Portfolio</a>
+                  <a href="http://harry-sharma.netlify.com"
+                    >Harry Sharma Portfolio</a
+                  >
                 </h3>
                 <div class="text">Design and Development</div>
-                <a
-                  href="http://harry-sharma.netlify.com"
-                  class="main-button"
+                <a href="http://harry-sharma.netlify.com" class="main-button"
                   >Know More</a
                 >
               </div>
@@ -397,10 +409,15 @@
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="https://www.figma.com/proto/yfP756xcpkDNxUM3rzKsp5/Dridh-Sankalp-Website-Redesign?node-id=3%3A893&viewport=728%2C616%2C0.08448927849531174&scaling=min-zoom">Dridh Sankalp Foundation</a>
+                  <a
+                    href="https://www.figma.com/proto/yfP756xcpkDNxUM3rzKsp5/Dridh-Sankalp-Website-Redesign?node-id=3%3A893&viewport=728%2C616%2C0.08448927849531174&scaling=min-zoom"
+                    >Dridh Sankalp Foundation</a
+                  >
                 </h3>
                 <div class="text">Web and Graphics Designing</div>
-                <a href="https://www.figma.com/proto/yfP756xcpkDNxUM3rzKsp5/Dridh-Sankalp-Website-Redesign?node-id=3%3A893&viewport=728%2C616%2C0.08448927849531174&scaling=min-zoom" class="main-button"
+                <a
+                  href="https://www.figma.com/proto/yfP756xcpkDNxUM3rzKsp5/Dridh-Sankalp-Website-Redesign?node-id=3%3A893&viewport=728%2C616%2C0.08448927849531174&scaling=min-zoom"
+                  class="main-button"
                   >Know More</a
                 >
               </div>
@@ -951,13 +968,13 @@
                     gi = d.getElementById,
                     ce = d.createElement,
                     gt = d.getElementsByTagName,
-                    id = 'typef_orm_share',
-                    b = 'https://embed.typeform.com/';
+                    id = "typef_orm_share",
+                    b = "https://embed.typeform.com/";
                   if (!gi.call(d, id)) {
-                    js = ce.call(d, 'script');
+                    js = ce.call(d, "script");
                     js.id = id;
-                    js.src = b + 'embed.js';
-                    q = gt.call(d, 'script')[0];
+                    js.src = b + "embed.js";
+                    q = gt.call(d, "script")[0];
                     q.parentNode.insertBefore(js, q);
                   }
                 })();
@@ -1054,13 +1071,13 @@
           gi = d.getElementById,
           ce = d.createElement,
           gt = d.getElementsByTagName,
-          id = 'typef_orm_share',
-          b = 'https://embed.typeform.com/';
+          id = "typef_orm_share",
+          b = "https://embed.typeform.com/";
         if (!gi.call(d, id)) {
-          js = ce.call(d, 'script');
+          js = ce.call(d, "script");
           js.id = id;
-          js.src = b + 'embed.js';
-          q = gt.call(d, 'script')[0];
+          js.src = b + "embed.js";
+          q = gt.call(d, "script")[0];
           q.parentNode.insertBefore(js, q);
         }
       })();
@@ -1170,7 +1187,7 @@
     <!--Round Custom Cursor -->
     <script>
       new kursor({
-        color: '#ff589e',
+        color: "#ff589e",
         type: 4,
       });
     </script>
@@ -1186,13 +1203,13 @@
           gi = d.getElementById,
           ce = d.createElement,
           gt = d.getElementsByTagName,
-          id = 'typef_orm_share',
-          b = 'https://embed.typeform.com/';
+          id = "typef_orm_share",
+          b = "https://embed.typeform.com/";
         if (!gi.call(d, id)) {
-          js = ce.call(d, 'script');
+          js = ce.call(d, "script");
           js.id = id;
-          js.src = b + 'embed.js';
-          q = gt.call(d, 'script')[0];
+          js.src = b + "embed.js";
+          q = gt.call(d, "script")[0];
           q.parentNode.insertBefore(js, q);
         }
       })();
@@ -1200,14 +1217,14 @@
 
     <script type="text/javascript">
       $(function () {
-        $('a[href*=#]').on('click', function (e) {
+        $("a[href*=#]").on("click", function (e) {
           e.preventDefault();
-          $('html, body').animate(
+          $("html, body").animate(
             {
-              scrollTop: $($(this).attr('href')).offset().top,
+              scrollTop: $($(this).attr("href")).offset().top,
             },
             500,
-            'linear'
+            "linear"
           );
         });
       });
