updated google analytics

--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
       href="assets/images/logo/logo-icon.svg"
       type="image/x-icon"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4JGH2GENXY"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-4JGH2GENXY");
+    </script>
   </head>
 
   <body>
@@ -1228,6 +1242,20 @@
           );
         });
       });
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4JGH2GENXY"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-4JGH2GENXY");
     </script>
   </body>
 </html>
