--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <meta charset="utf-8" />
     <meta
       name="keywords"
-      content="ayush kumar ui ux designer about me, ayush kumar ui ux designer my story, ayush kumar portfolio, ui ux designer about"
+      content="ui ux designer, ui ux designer portfolio website, ui and ux designer, ayush kumar ui ux designer, ayush kumar ui ux designer about me, ui ux designer about"
     />
     <meta
       name="description"
@@ -102,11 +102,7 @@
 
     <!-- Preconnect Typeform -->
 
-    <link
-      rel="preconnect"
-      href="https://embed.typeform.com"
-      media="screen and (min-width: 720px)"
-    />
+    <link rel="preconnect" href="https://embed.typeform.com" />
 
     <!-- Preload Fontawesome -->
 
@@ -138,20 +134,6 @@
     <!-- Fontawesome -->
     <link rel="preload" href="assets/css/all.min.css" as="style" />
     <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
-
-    <!-- Scroll Down CSS-->
-    <link
-      rel="preload"
-      href="assets/css/scroll-down.css"
-      as="style"
-      media="screen and (min-width: 720px)"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/scroll-down.css"
-      media="screen and (min-width: 720px)"
-    />
 
     <!-- Portfolio CSS-->
     <link rel="preload" href="assets/css/portfolio.css" as="style" />
@@ -243,6 +225,9 @@
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li class="inactive">
+                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                </li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -318,6 +303,7 @@
           >
             <img
               src="assets/images/ayush.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="400"
@@ -384,6 +370,7 @@
           >
             <img
               src="assets/images/designing.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="400"
@@ -422,6 +409,7 @@
           >
             <img
               src="assets/images/designing.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="400"
@@ -442,6 +430,7 @@
           >
             <img
               src="assets/images/goals-and-ambitions.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="400"
@@ -493,7 +482,8 @@
           <div class="row">
             <div class="offset-lg-3 col-lg-6">
               <div class="info">
-                <h1>Trusted by the leading brands</h1>
+                <h1 class="desk">Trusted by the leading brands</h1>
+                <h1 class="mob">Trusted by the <br />leading brands</h1>
                 <p class="desk">
                   I got to work with various clients across the globe.
                 </p>
@@ -804,11 +794,11 @@
                 <h1 class="desk">Where did I learn UX design?</h1>
                 <h1 class="mob">How I learned design?</h1>
                 <p class="desk">
-                  Although I'm an autodidact but I learned design<br />
+                  Although I'm an autodidact but I studied design<br />
                   from the designers and educators at -
                 </p>
                 <p class="mob">
-                  Although I'm an autodidact but I learned design from the
+                  Although I'm an autodidact but I studied design from the
                   educators at -
                 </p>
               </div>
@@ -1684,6 +1674,7 @@
           >
             <img
               src="assets/images/mentoring.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto mentoring-mob"
               alt="App"
               width="400"
@@ -1822,7 +1813,7 @@
                 Download my
                 <span
                   ><a
-                    href="https://www.dropbox.com/s/j6v8yv2q3ca31zh/Designer.pdf?dl=0"
+                    href="https://bit.ly/ayushkumar"
                     class="download"
                     title="Download Resume"
                     >Resume</a
@@ -1831,7 +1822,7 @@
                 and
                 <span
                   ><a
-                    href="https://www.dropbox.com/s/tnm76jdjgimoh4k/Portfolio.pdf?dl=0"
+                    href="https://bit.ly/ayushkumar"
                     class="download"
                     title="Download Portfolio"
                     >Portfolio</a
@@ -1999,7 +1990,7 @@
     <!-- Global Init -->
     <script defer src="assets/js/custom.js"></script>
 
-    <script defer src="assets/js/navbar.js"></script>
+    <script defer src="assets/js/embed.js"></script>
     <script src="assets/js/kursor.min.js"></script>
 
     <!--Round Custom Cursor -->
