--- a/faqs.html
+++ b/faqs.html
@@ -124,20 +124,6 @@
     <link rel="preload" href="assets/css/all.min.css" as="style" />
     <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
 
-    <!-- Scroll Down CSS-->
-    <link
-      rel="preload"
-      href="assets/css/scroll-down.css"
-      as="style"
-      media="screen and (min-width: 720px)"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/scroll-down.css"
-      media="screen and (min-width: 720px)"
-    />
-
     <!-- Portfolio CSS-->
     <link rel="preload" href="assets/css/portfolio.css" as="style" />
     <link rel="stylesheet" href="assets/css/portfolio.css" />
@@ -228,6 +214,9 @@
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li class="inactive">
+                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                </li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -276,6 +265,7 @@
             >
               <img
                 src="assets/images/faqs/how-much-do-you-charge.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -357,6 +347,7 @@
             >
               <img
                 src="assets/images/faqs/how-long-does-a-project-take.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -402,6 +393,7 @@
             >
               <img
                 src="assets/images/faqs/how-long-does-a-project-take.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -421,6 +413,7 @@
             >
               <img
                 src="assets/images/faqs/how-much-experience-do-you-have.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -485,6 +478,7 @@
             >
               <img
                 src="assets/images/faqs/can-you-share-some-case-studies-and-testimonials.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -528,6 +522,7 @@
             >
               <img
                 src="assets/images/faqs/can-you-share-some-case-studies-and-testimonials.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -547,6 +542,7 @@
             >
               <img
                 src="assets/images/faqs/can-you-guarantee-results.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -599,6 +595,7 @@
             >
               <img
                 src="assets/images/faqs/can-you-work-for-free.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -615,8 +612,8 @@
               <div class="left-text">
                 <p class="desk">
                   I would love to work for free but for a charitable cause for a
-                  Non-Profit Organisation. I have a philosophy, for every 10
-                  clients I take, I work for a Non-Profit Organisation for
+                  Non-Profit Organization. I have a philosophy, for every 10
+                  clients I take, I work for a Non-Profit Organization for
                   free.<br /><br />
                   If you are a Non-Profit organization, I would love to help you
                   in making a difference. Feel free to reach out to me at
@@ -626,8 +623,8 @@
                 </p>
                 <p class="mob">
                   I would love to work for free but for a charitable cause for a
-                  Non-Profit Organisation. I have a philosophy, for every 10
-                  clients I take, I work for a Non-Profit Organisation for
+                  Non-Profit Organization. I have a philosophy, for every 10
+                  clients I take, I work for a Non-Profit Organization for
                   free.<br /><br />
                   If you are a Non-Profit organization, I would love to help you
                   in making a difference. Feel free to reach out to me at
@@ -644,6 +641,7 @@
             >
               <img
                 src="assets/images/faqs/can-you-work-for-free.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -663,6 +661,7 @@
             >
               <img
                 src="assets/images/faqs/what-are-the-services-you-offer.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -716,6 +715,7 @@
             >
               <img
                 src="assets/images/faqs/who-is-your-ideal-client.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -757,6 +757,7 @@
             >
               <img
                 src="assets/images/faqs/who-is-your-ideal-client.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -776,6 +777,7 @@
             >
               <img
                 src="assets/images/faqs/when-can-we-get-started.webp"
+                loading="lazy"
                 class="rounded img-fluid d-block mx-auto"
                 alt="App"
                 width="800"
@@ -1083,7 +1085,7 @@
                 Download my
                 <span
                   ><a
-                    href="https://www.dropbox.com/s/j6v8yv2q3ca31zh/Designer.pdf?dl=0"
+                    href="https://bit.ly/ayushkumar"
                     class="download"
                     title="Download Resume"
                     >Resume</a
@@ -1092,7 +1094,7 @@
                 and
                 <span
                   ><a
-                    href="https://www.dropbox.com/s/tnm76jdjgimoh4k/Portfolio.pdf?dl=0"
+                    href="https://bit.ly/ayushkumar"
                     class="download"
                     title="Download Portfolio"
                     >Portfolio</a
@@ -1260,7 +1262,7 @@
     <!-- Global Init -->
     <script defer src="assets/js/custom.js"></script>
 
-    <script defer src="assets/js/navbar.js"></script>
+    <script defer src="assets/js/embed.js"></script>
     <script src="assets/js/kursor.min.js"></script>
 
     <!--Round Custom Cursor -->
