--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <meta charset="utf-8" />
     <meta
       name="keywords"
-      content="ui ux designer in bangalore freelance, ui ux designer portfolio, ayush kumar ui ux designer, ayush kumar portfolio"
+      content="ui ux designer, ui ux designer portfolio website, ui and ux designer, ayush kumar ui ux designer, ayush kumar design portfolio"
     />
     <meta
       name="description"
@@ -142,20 +142,6 @@
     <link rel="preload" href="assets/css/all.min.css" as="style" />
     <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
 
-    <!-- Scroll Down CSS-->
-    <link
-      rel="preload"
-      href="assets/css/scroll-down.css"
-      as="style"
-      media="screen and (min-width: 720px)"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/scroll-down.css"
-      media="screen and (min-width: 720px)"
-    />
-
     <!-- Portfolio CSS-->
     <link rel="preload" href="assets/css/portfolio.css" as="style" />
     <link rel="stylesheet" href="assets/css/portfolio.css" />
@@ -246,6 +232,9 @@
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li class="inactive">
+                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                </li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -422,7 +411,7 @@
     </section>
 
     <!-- ***** Case Studies ***** -->
-    <section class="section" id="work">
+    <section class="section pad-5rem" id="work">
       <div class="container">
         <!-- ***** Section Title Start ***** -->
         <div class="row">
@@ -450,7 +439,7 @@
             <div class="blog-post-thumb">
               <div class="img div-zoom">
                 <a
-                  href="https://missioned.netlify.app/"
+                  href="https://ayushkumar.me/missioned/"
                   title="MissionEd Case Study"
                   aria-label="MissionEd Case Study"
                   tabindex="-1"
@@ -466,7 +455,9 @@
               <div class="blog-content">
                 <h3>MissionEd</h3>
                 <div class="text">Branding, Designing, Development</div>
-                <a href="https://missioned.netlify.app/" class="project-button"
+                <a
+                  href="https://ayushkumar.me/missioned/"
+                  class="project-button"
                   >Know More &nbsp; <i class="fas fa-arrow-right"></i
                 ></a>
               </div>
@@ -481,7 +472,7 @@
             <div class="blog-post-thumb">
               <div class="img div-zoom" id="proj2">
                 <a
-                  href="zebo.netlify.app/"
+                  href="https://ayushkumar.me/zebo.ai/"
                   title="Zebo.ai Case Study"
                   aria-label="Zebo.ai Case Study"
                   tabindex="-1"
@@ -497,7 +488,7 @@
               <div class="blog-content">
                 <h3>Zebo.ai</h3>
                 <div class="text">Designing and Development</div>
-                <a href="zebo.netlify.app/" class="project-button"
+                <a href="https://ayushkumar.me/zebo.ai/" class="project-button"
                   >Know More &nbsp; <i class="fas fa-arrow-right"></i
                 ></a>
               </div>
@@ -584,7 +575,7 @@
             <div class="blog-post-thumb">
               <div class="img div-zoom" id="proj1">
                 <a
-                  href="http://harry-sharma.netlify.com"
+                  href="https://ayushkumar.me/harry-portfolio/"
                   title="Harry Sharma Portfolio"
                   aria-label="Harry Sharma Portfolio"
                   tabindex="-1"
@@ -600,7 +591,9 @@
               <div class="blog-content">
                 <h3>Harry's Portfolio</h3>
                 <div class="text">Design and Development</div>
-                <a href="http://harry-sharma.netlify.com" class="project-button"
+                <a
+                  href="https://ayushkumar.me/harry-portfolio/"
+                  class="project-button"
                   >Know More &nbsp; <i class="fas fa-arrow-right"></i
                 ></a>
               </div>
@@ -1160,7 +1153,7 @@
                   <li class="active">Consultation</li>
                   <li class="active">UX Research</li>
                   <li class="active">Visual Design</li>
-                  <li class="active">UI Protoyping</li>
+                  <li class="active">UI Prototyping</li>
                   <li class="active">Brand Copywriting</li>
                   <li class="active">Usability Testing and QA</li>
                 </ul>
@@ -1195,7 +1188,7 @@
                   <li class="active">Consultation</li>
                   <li class="active">UX Research</li>
                   <li class="active">Visual Design</li>
-                  <li class="active">UI Protoyping</li>
+                  <li class="active">UI Prototyping</li>
                   <li class="active">Brand Copywriting</li>
                   <li class="active">Product Development</li>
                   <li class="active">Usability Testing and QA</li>
@@ -1210,6 +1203,18 @@
               </div>
             </div>
           </div>
+        </div>
+        <div
+          style="text-align: center; margin-top: 30px"
+          data-scroll-reveal="enter bottom move 30px over 0.4s after 0.2s"
+        >
+          <a
+            href="solutions"
+            class="main-button-slider"
+            title="View all design solutions"
+            aria-label="View all design solutions"
+            >View all solutions</a
+          >
         </div>
       </div>
     </section>
@@ -1279,7 +1284,7 @@
                 Download my
                 <span
                   ><a
-                    href="https://www.dropbox.com/s/j6v8yv2q3ca31zh/Designer.pdf?dl=0"
+                    href="https://bit.ly/ayushkumar"
                     class="download"
                     title="Download Resume"
                     >Resume</a
@@ -1288,7 +1293,7 @@
                 and
                 <span
                   ><a
-                    href="https://www.dropbox.com/s/tnm76jdjgimoh4k/Portfolio.pdf?dl=0"
+                    href="https://bit.ly/ayushkumar"
                     class="download"
                     title="Download Portfolio"
                     >Portfolio</a
@@ -1438,7 +1443,7 @@
     <!-- Global Custom JS -->
     <script defer src="assets/js/custom.js"></script>
 
-    <script defer src="assets/js/navbar.js"></script>
+    <script defer src="assets/js/embed.js"></script>
     <script src="assets/js/kursor.min.js"></script>
 
     <!--Round Custom Cursor -->
