--- a/mentorship.html
+++ b/mentorship.html
@@ -142,20 +142,6 @@
     <link rel="preload" href="assets/css/all.min.css" as="style" />
     <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
 
-    <!-- Scroll Down CSS-->
-    <link
-      rel="preload"
-      href="assets/css/scroll-down.css"
-      as="style"
-      media="screen and (min-width: 720px)"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/scroll-down.css"
-      media="screen and (min-width: 720px)"
-    />
-
     <!-- Portfolio CSS-->
     <link rel="preload" href="assets/css/portfolio.css" as="style" />
     <link rel="stylesheet" href="assets/css/portfolio.css" />
@@ -246,6 +232,9 @@
                 <li><a href="mentorship" class="active">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li class="inactive">
+                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                </li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -361,9 +350,8 @@
                   </p>
                 </div>
               </div>
-              <!-- ***** Features Small Item End ***** -->
 
-              <!-- ***** UX Consultation ***** -->
+              <!-- ***** Upscale your Career ***** -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 services"
                 data-scroll-reveal="enter bottom move 50px over 0.2s after 0.3s"
@@ -379,7 +367,7 @@
                   >
                     <i
                       ><img
-                        src="assets/images/home-feature/upscale.png"
+                        src="assets/images/home-feature/upscale.webp"
                         loading="lazy"
                         width="100"
                         height="100"
@@ -395,12 +383,10 @@
                     I help companies in growing their business and reaching
                     their full potential by solving their problems
                   </p>
-                  <!-- I help companies in growing their business and reaching their full potential. -->
                 </div>
               </div>
-              <!-- ***** Features Small Item End ***** -->
 
-              <!-- ***** Branding ***** -->
+              <!-- ***** Custom Goalsetting ***** -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 services"
                 data-scroll-reveal="enter bottom move 50px over 0.2s after 0.4s"
@@ -460,8 +446,8 @@
                 <br />here's what they have to say about me.
               </p>
               <p class="pmob">
-                Designers love the mentorship, here's what <br />they have to
-                say about me.
+                Designers love the mentorship, here's what they have to say
+                about me.
               </p>
             </div>
           </div>
@@ -592,7 +578,7 @@
           </div>
           <!-- ***** Testimonials Item End ***** -->
         </div>
-        <!-- Second Row of Testimonials - Ujjwal, Audil, Keshav-->
+        <!-- Second Row of Testimonials-->
         <div class="row" style="margin-top: 30px">
           <!-- ***** Testimonials Item Start ***** -->
           <div
@@ -760,7 +746,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="center-heading">
-              <h2 class="section-title">Design Mentorship Plans</h2>
+              <h2 class="section-title">Design Mentorship Packages</h2>
             </div>
           </div>
           <div class="offset-lg-3 col-lg-6">
@@ -771,9 +757,8 @@
                 you can opt for the higher plan<br />
               </p>
               <p class="pmob">
-                There's a mentorship plan for every budget, if you are not very
-                sure please choose the $15 plan and if you like the session then
-                you can opt for the higher plan<br />
+                If you are not very sure please choose the $15 plan and if you
+                like the session then you can opt for the higher plan<br />
               </p>
             </div>
           </div>
@@ -885,7 +870,7 @@
         </div>
       </div>
     </section>
-
+    <div class="space mob"></div>
     <!-- ***** Why consult with me? ***** -->
     <section class="section first-section" id="features">
       <div class="container">
@@ -896,6 +881,7 @@
           >
             <img
               src="assets/images/ayush.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="400"
@@ -909,8 +895,10 @@
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
-              <h2 class="section-title desk">Why consult with me?</h2>
-              <h2 class="section-title mob">Why consult with me?</h2>
+              <h2 class="section-title desk">Why should I consult with you?</h2>
+              <h2 class="section-title mob">
+                Why should I <br />consult with you?
+              </h2>
             </div>
             <div class="left-text">
               <p class="desk">
@@ -956,6 +944,7 @@
           >
             <img
               src="assets/images/what's-in-it-for-you.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="800"
@@ -999,6 +988,7 @@
           >
             <img
               src="assets/images/what's-in-it-for-you.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="800"
@@ -1008,7 +998,7 @@
         </div>
       </div>
     </section>
-
+    <div class="space mob"></div>
     <!-- *****  ***** -->
     <section class="section first-section">
       <div class="container">
@@ -1019,6 +1009,7 @@
           >
             <img
               src="assets/images/where-can-i-know-more-about-you.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="800"
@@ -1066,6 +1057,7 @@
         </div>
       </div>
     </section>
+    <div class="space desk"></div>
     <section class="section colored" id="free-consultation">
       <div class="container">
         <!-- ***** Section Title Start ***** -->
@@ -1130,6 +1122,7 @@
           >
             <img
               src="assets/images/i'm-unable-to-book-the-mentorship-session.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt=""
               width="800"
@@ -1192,6 +1185,7 @@
           >
             <img
               src="assets/images/i'm-not -sure-if-I'm-ready-for-this-mentorship-program.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="800"
@@ -1235,6 +1229,7 @@
           >
             <img
               src="assets/images/i'm-not -sure-if-I'm-ready-for-this-mentorship-program.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="800"
@@ -1258,6 +1253,7 @@
           >
             <img
               src="assets/images/is-there-a-refund_.webp"
+              loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
               width="800"
@@ -1297,6 +1293,8 @@
         </div>
       </div>
     </section>
+    <div class="space desk"></div>
+    <div class="space desk"></div>
     <a
       class="typeform-share button chat-blob"
       rel="noopener"
@@ -1446,7 +1444,7 @@
     <!-- Global Init -->
     <script defer src="assets/js/custom.js"></script>
 
-    <script defer src="assets/js/navbar.js"></script>
+    <script defer src="assets/js/embed.js"></script>
     <script src="assets/js/kursor.min.js"></script>
 
     <!--Round Custom Cursor -->
