--- a/testimonials.html
+++ b/testimonials.html
@@ -130,20 +130,6 @@
     <link rel="preload" href="assets/css/all.min.css" as="style" />
     <link rel="stylesheet" type="text/css" href="assets/css/all.min.css" />
 
-    <!-- Scroll Down CSS-->
-    <link
-      rel="preload"
-      href="assets/css/scroll-down.css"
-      as="style"
-      media="screen and (min-width: 720px)"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/scroll-down.css"
-      media="screen and (min-width: 720px)"
-    />
-
     <!-- Portfolio CSS-->
     <link rel="preload" href="assets/css/portfolio.css" as="style" />
     <link rel="stylesheet" href="assets/css/portfolio.css" />
@@ -239,6 +225,9 @@
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li class="inactive">
+                  <a href="mentorship-testimonials">Mentorship Reviews</a>
+                </li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -972,7 +961,7 @@
                 Download my
                 <span
                   ><a
-                    href="https://www.dropbox.com/s/j6v8yv2q3ca31zh/Designer.pdf?dl=0"
+                    href="https://bit.ly/ayushkumar"
                     class="download"
                     title="Download Resume"
                     >Resume</a
@@ -981,7 +970,7 @@
                 and
                 <span
                   ><a
-                    href="https://www.dropbox.com/s/tnm76jdjgimoh4k/Portfolio.pdf?dl=0"
+                    href="https://bit.ly/ayushkumar"
                     class="download"
                     title="Download Portfolio"
                     >Portfolio</a
@@ -1149,7 +1138,7 @@
     <!-- Global Init -->
     <script defer src="assets/js/custom.js"></script>
 
-    <script defer src="assets/js/navbar.js"></script>
+    <script defer src="assets/js/embed.js"></script>
     <script src="assets/js/kursor.min.js"></script>
 
     <!--Round Custom Cursor -->
